Remove unused profile (#39)